[package]
name = "bevy_scriptum"
authors = ["Jaroslaw Konik <konikjar@gmail.com>"]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["game-development"]
description = "Plugin for Bevy engine that allows you to write some of your game logic in a scripting language"
repository = "https://github.com/jarkonik/bevy_scriptum"
keywords = ["bevy", "rhai", "scripting", "game", "gamedev"]

[features]
lua = ["mlua/luajit"]
rhai = ["dep:rhai"]

[dependencies]
bevy = { default-features = false, version = "0.13.0", features = [
    "bevy_asset",
] }
serde = "1.0.162"
rhai = { version = "1.14.0", features = ["sync", "internals", "unchecked"], optional = true }
thiserror = "1.0.40"
anyhow = "1.0.82"
tracing = "0.1.40"
mlua = { version = "0.9.8", features = ["luajit", "vendored", "send"], optional = true }

[[example]]
name = "call_function_from_rust_rhai"
path = "examples/rhai/call_function_from_rust.rs"

[[example]]
name = "current_entity_rhai"
path = "examples/rhai/current_entity.rs"

[[example]]
name = "custom_type_rhai"
path = "examples/rhai/custom_type.rs"

[[example]]
name = "ecs_rhai"
path = "examples/rhai/ecs.rs"

[[example]]
name = "entity_variable_rhai"
path = "examples/rhai/entity_variable.rs"

[[example]]
name = "function_params_rhai"
path = "examples/rhai/function_params.rs"

[[example]]
name = "hello_world_rhai"
path = "examples/rhai/hello_world.rs"

[[example]]
name = "non_closure_system_rhai"
path = "examples/rhai/non_closure_system.rs"

[[example]]
name = "promises_rhai"
path = "examples/rhai/promises.rs"

[[example]]
name = "side_effects_rhai"
path = "examples/rhai/side_effects.rs"

[[example]]
name = "call_function_from_rust_lua"
path = "examples/lua/call_function_from_rust.rs"

[[example]]
name = "current_entity_lua"
path = "examples/lua/current_entity.rs"

[[example]]
name = "custom_type_lua"
path = "examples/lua/custom_type.rs"

[[example]]
name = "ecs_lua"
path = "examples/lua/ecs.rs"

[[example]]
name = "entity_variable_lua"
path = "examples/lua/entity_variable.rs"

[[example]]
name = "function_params_lua"
path = "examples/lua/function_params.rs"

[[example]]
name = "hello_world_lua"
path = "examples/lua/hello_world.rs"

[[example]]
name = "non_closure_system_lua"
path = "examples/lua/non_closure_system.rs"

[[example]]
name = "promises_lua"
path = "examples/lua/promises.rs"

[[example]]
name = "side_effects_lua"
path = "examples/lua/side_effects.rs"

[dev-dependencies]
tracing-subscriber = "0.3.18"
mlua = { version = "0.9.8", features = ["luajit", "vendored", "send"] }
rhai = { version = "1.14.0", features = ["sync", "internals", "unchecked"] }
